--- a/usr.sbin/sdio/Makefile
+++ b/usr.sbin/sdio/Makefile
@@ -1,6 +1,8 @@
-#	$OpenBSD: src/usr.sbin/sdio/Makefile,v 1.1 2006/11/28 20:26:31 uwe Exp $
+#	$OpenBSD: src/usr.sbin/sdio/Makefile,v 1.2 2007/05/26 19:19:47 uwe Exp $
 
 PROG=	sdio
 MAN=	sdio.8
+
+CPPFLAGS+= -I${.CURDIR}/../../sys
 
 .include <bsd.prog.mk>
