--- a/share/man/man4/man4.amd64/Makefile
+++ b/share/man/man4/man4.amd64/Makefile
@@ -1,6 +1,6 @@
-#	$OpenBSD: src/share/man/man4/man4.amd64/Makefile,v 1.5 2007/08/02 16:40:27 deraadt Exp $
+#	$OpenBSD: src/share/man/man4/man4.amd64/Makefile,v 1.6 2007/09/12 18:18:27 deraadt Exp $
 
-MAN=	autoconf.4 bios.4 cpu.4 intro.4 ioapic.4 mem.4 nvram.4
+MAN=	autoconf.4 bios.4 cpu.4 intro.4 ioapic.4 mem.4 nvram.4 pctr.4
 
 MLINKS+= mem.4 kmem.4
 MANSUBDIR=amd64
