--- a/distrib/sgi/Makefile
+++ b/distrib/sgi/Makefile
@@ -1,5 +1,5 @@
-#	$OpenBSD: src/distrib/sgi/Makefile,v 1.2 2005/04/27 03:59:39 deraadt Exp $
+#	$OpenBSD: src/distrib/sgi/Makefile,v 1.3 2007/10/13 21:22:27 deraadt Exp $
 
-SUBDIR= ramdisk cdfs
+SUBDIR= ramdisk cdfs iso
 
 .include <bsd.subdir.mk>
